--- a/AngularGrid/App/Views/filterTemplate.html
+++ b/AngularGrid/App/Views/filterTemplate.html
@@ -4,13 +4,16 @@
     <div ng-show="filterType == 'textbox'" class="textboxfilter">
         <input type="hidden" ng-model="column" />
         <input type="text" ng-model="value" placeholder="Search" />
-        <button ng-show="value.length" ng-click="applyFilter({ column:column,value:value,type:filterType,opt:filterOpt })" class="inputok glyphicon glyphicon-ok-circle"></button>
+        <button ng-show="value.length" ng-click="applyFilter({ column:column,value:value,type:filterType,opt:filterOpt,event:$event })" class="inputok glyphicon glyphicon-ok-circle"></button>
         <button ng-show="value.length" ng-click="value=''; applyFilter({ column: column, value: '', type: filterType, opt: filterOpt });" class="inputclear glyphicon glyphicon-remove-circle"></button>
     </div>
     <div ng-show="filterType == 'multiselect'" class="textboxfilter">
         <!--<div ng-dropdown-multiselect="" options="filterDataList" selected-model="filterDatamodel" extra-settings="example9settings"></div>-->
-        <button class="popper" style="width:100%;" data-toggle="popover">{{multiHeaderText}}</button>
-        
+        <button class="helperButton ui-grid-icon-angle-down" style="width: 100%; height: 14px;" data-toggle="popover">{{multiHeaderText}}</button>
+
+        <!--<button data-toggle="popover" style="width:100%;" class="helperButton glyphicon glyphicon-filter">{{multiHeaderText}}</button>-->
+
+
         <!--<div class="dropdown">
             <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
                 Dropdown Example
@@ -31,17 +34,17 @@
                             ng-disabled="isDisabled" type="button">
                         ✓&nbsp;&nbsp;All
                     </button>
-                    <button class="helperButton" ng-click="select( 'none', $event );" ng-disabled="isDisabled" type="button">×&nbsp;&nbsp;None</button>
-              
+                    <button class="helperButton" ng-click="select( 'none', $event ); applyFilter({ column: column, value: rows, type: filterType, opt: filterOpt }); " ng-disabled=" isdisabled" type="button">×&nbsp;&nbsp;None</button>
+
 
                 </div>
                 <div class="textboxfilter">
                     <input type="text" ng-model="searchText.Text" placeholder="Search.." />
-                    <button ng-click="clearSearch()" class="inputclear glyphicon glyphicon-remove-circle"></button>
+                    <button ng-show="searchText.Text.length" ng-click="clearSearch();" class="inputclear glyphicon glyphicon-remove-circle"></button>
                 </div>
             </div>
             <div class="filterTable">
-               
+
             </div>
         </div>
 
