--- a/AngularGrid/Views/Home/About.cshtml
+++ b/AngularGrid/Views/Home/About.cshtml
@@ -7,3 +7,6 @@
 <p>Use this area to provide additional information.</p>
 
 
+@*.ui-grid-top-panel, .ui-grid-header-viewport {
+    overflow: visible;
+}*@ 
